# CEIA-b06-PLN2-TP3

./: README.md  app.py  config.py  pyproject.toml
data/: cv_1.txt  cv_2.txt  cv_3.txt  cv_4.txt
services/agents/: multi_agent.py
services/ingest/: main.py
services/rag/: chatbot.py  embeddings.py  vector_store.py
services/streamlit/: main.py  pyproject.toml
