[project]
name = "ceia-b06-pln2-tp3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "groq>=0.37.1",
    "httpx>=0.28.1",
    "mypy>=1.19.0",
    "nltk>=3.9.2",
    "pinecone>=8.0.0",
    "requests>=2.32.5",
    "sentence-transformers>=5.2.0",
    "streamlit>=1.52.1",
]
